# RonithDhanesh_22BAI10359_SmartResumeScreener

./: .env  .gitignore  README.md  app.py  dashboard.py  main.py  pyproject.toml  rag.ipynb  requirements.txt  smart_screener.db
backend/: database.py  match_job.py  parsing_utils.py
frontend/: app.py  dashboard.py
